package mini_Uno.cards;

public record Card(String color, String value) {

}
